Updated some Java 11 compile errors and fixed script menu